--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
     
     <!-- Import ethers.js for ThirdWeb compatibility -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js" type="application/javascript"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"></script>
 
     <!-- Import ZORA SDK -->
     <script src="https://unpkg.com/@zoralabs/coins-sdk@0.0.3/dist/index.umd.js"></script>
